--- a/slint_lib/index.html
+++ b/slint_lib/index.html
@@ -4,7 +4,7 @@
         <canvas id="canvas"></canvas>
         <script type="module">
             // import the generated file.
-            import init from "./pkg/slint_lib.js";
+            import init from "../pkg/slint_lib.js";
             init();
         </script>
     </body>
